recommendation/recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
spec:
  selector:
    app: recommendation-service
  ports:
    - port: 5000
      targetPort: 5000
