recommendation/recommendation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tenark-tenant-host
    http:
      paths:
      - path: /recommendations
        pathType: Prefix
        backend:
          service:
            name: recommendations-service
            port:
              number: 5000
  # Optional TLS (uncomment if you have a certificate)
  # tls:
  # - hosts:
  #     - tenant-a.bookstore.com
  #   secretName: tenant-a-tls
